# tic-tac-toe

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: game_logic.py  game_store.py  main.py  models.py  websocket.py
backend/tests/: conftest.py  test_multiplayer.py
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  cloudbuild.yaml  index.html  package-lock.json  package.json  server.js  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css
terraform/: README.md  main.tf  outputs.tf  variables.tf
