[tool.poetry]
name = "tic-tac-toe-backend"
version = "0.1.0"
description = "Multiplayer Tic-Tac-Toe over WebSockets"
authors = ["Tic-Tac-Toe Team"]
readme = "README.md"
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.6"
uvicorn = { extras = ["standard"], version = "0.32.1" }
websockets = "14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
httpx = "^0.27"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
